--- a/assets/assets/lang/de.json
+++ b/assets/assets/lang/de.json
@@ -399,7 +399,7 @@
   "geologyStep1": "Aktivieren Sie die Geologieebene mit dem Schalter im Ebenenmenü",
   "geologyStep2": "Passen Sie die Deckkraft der Ebene nach Bedarf an",
   "geologyStep3": "Tippen Sie auf einen beliebigen Bereich der Karte, um detaillierte geologische Informationen anzuzeigen",
-  "geologyStep4": "Verwenden Sie die Schaltfläche 'Stratigraphie anzeigen', um die stratigraphische Säule des Bereichs zu erkunden",
+  "geologyStep4": "Berühren Sie einen beliebigen Punkt auf der Karte, um detaillierte geologische Informationen für diesen Standort zu sehen.",
   "gneiss": "Gneis",
   "granite": "Granit",
   "graywacke": "Grauwacke",
