--- a/assets/assets/lang/el.json
+++ b/assets/assets/lang/el.json
@@ -422,7 +422,7 @@
   "geologyStep1": "Ενεργοποιήστε το γεωλογικό επίπεδο χρησιμοποιώντας τον διακόπτη στο μενού επιπέδων",
   "geologyStep2": "Προσαρμόστε την αδιαφάνεια του επιπέδου όπως χρειάζεται",
   "geologyStep3": "Πατήστε οπουδήποτε στον χάρτη για να δείτε λεπτομερείς γεωλογικές πληροφορίες",
-  "geologyStep4": "Χρησιμοποιήστε το κουμπί 'Προβολή στρωματογραφίας' για να εξερευνήσετε τη στρωματογραφική στήλη της περιοχής",
+  "geologyStep4": "Αγγίξτε οποιοδήποτε σημείο στον χάρτη για να δείτε λεπτομερείς γεωλογικές πληροφορίες για αυτή την τοποθεσία.",
   "gneiss": "Γνεύσιος",
   "granite": "Γρανίτης",
   "graywacke": "Γραουβάκη",
